WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182590
Evernote device management web view sometimes displays at the wrong scale
https://bugs.webkit.org/show_bug.cgi?id=182590
Summary
Evernote device management web view sometimes displays at the wrong scale
Tim Horton
Reported
2018-02-07 17:11:35 PST
Evernote device management web view sometimes displays at the wrong scale
Attachments
Patch
(17.53 KB, patch)
2018-02-07 17:12 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-02-07 17:12:35 PST
Created
attachment 333342
[details]
Patch
Tim Horton
Comment 2
2018-02-07 17:12:55 PST
<
rdar://problem/36633687
>
Simon Fraser (smfr)
Comment 3
2018-02-07 17:22:06 PST
Comment on
attachment 333342
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=333342&action=review
> Source/WebKit/ChangeLog:25 > + Evernote implements the WKWebView's scroll view's delegate method > + viewForZoomingInScrollView: and returns null. This results in > + WKScrollView's zoomScale always returning 1, no matter what the > + WKContentView's actual scale is. This will result in us never updating > + the WKContentView's scale to 1. When loading a page that has a few > + scale changes during load but ends up at scale 1, we get stuck at whatever > + intermediate scale immediately preceded settling on 1. > + > + Fix this by not forwarding viewForZoomingInScrollView: to the external > + WKScrollView delegate; we are in charge of the contents of the scroll > + view (including which view scrollView's zoomScale should track), and > + overriding viewForZoomingInScrollView: is only ever going to lead to > + a broken WebKit.
Put all this above the function names. Also null -> nil says mitz.
> Tools/TestWebKitAPI/Tests/ios/WKScrollViewDelegate.mm:2 > + * Copyright (C) 2016 Apple Inc. All rights reserved.
2016-2018 i guess.
Tim Horton
Comment 4
2018-02-07 17:27:40 PST
https://trac.webkit.org/changeset/228253/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug